<!--
  ~ ============================================================================
  ~ = COPYRIGHT
  ~               PAX TECHNOLOGY, Inc. PROPRIETARY INFORMATION
  ~    This software is supplied under the terms of a license agreement or
  ~    nondisclosure agreement with PAX  Technology, Inc. and may not be copied
  ~    or disclosed except in accordance with the terms in that agreement.
  ~        Copyright (C) 2017 -? PAX Technology, Inc. All rights reserved.
  ~ Revision History:
  ~ Date	                     Author	                        Action
  ~ 17-11-27 下午5:27  	     zenglc           	    Create/Add/Modify/Delete
  ~ ============================================================================
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myview="http://schemas.android.com/apk/res-auto"

    android:title="@string/settings_menu_standby_parameter">

    <com.pax.order.settings.SettingsEditTextPreference
        android:capitalize="words"
        android:dialogTitle="@string/stand_by_time"
        android:key="STANDBY_TIME"
        android:layout="@layout/prefs_list_et_item"
        android:negativeButtonText="@string/cancel"
        android:positiveButtonText="@string/affirm"
        android:title="@string/stand_by_time"
        myview:defaultValue="5"
        myview:maxLength="32"
        myview:maxLines="1"
        myview:selectAllOnFocus="true"
        myview:singLine="true" />

</PreferenceScreen>