<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_size_normal"
            android:text="@string/welcome_soft_name"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_size_normal"
            android:text="@string/version_no"
            android:textColor="@color/cancel_button_text"
            android:textSize="@dimen/font_size_normal"/>

        <TextView
            android:id="@+id/tv_updatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_size_normal"
            android:text="@string/version_date"
            android:textColor="@color/cancel_button_text"
            android:textSize="@dimen/font_size_normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/space_size_normal"
            android:text="@string/company_info"
            android:textColor="@color/textedit_hint"
            android:textSize="@dimen/font_size_normal_small"/>

    </LinearLayout>

</LinearLayout>